[package]
name = "arinc429-sniffer"
version = "0.1.0"
edition = "2021"
description = "ARINC 429 Aviation Bus Packet Analyzer - Geek-level avionics bus sniffer for Linux terminal"
license = "MIT"

[[bin]]
name = "a429-sniff"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "2.1"
thiserror = "1.0"
anyhow = "1.0"
byteorder = "1.5"
memmap2 = "0.9"
crossterm = "0.28"
tabled = "0.16"
rand = "0.8"

[dev-dependencies]
hex = "0.4"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[target.x86_64-unknown-linux-musl]
linker = "rust-lld"
